--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         
         <script src="" async defer></script>
 
+        <h1>Python Academy</h1>
         
+        <code>Сайт находится в процессе разработки! Связаться с автором можно через почту 
+            <a href="mailto:anton.a.petrov[at] gmail.com">почту</a>.
+        </code>
     </body>
 </html>
