--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <h1>Python Academy</h1>
         
-        <code>Сайт находится в процессе разработки! Связаться с автором можно через почту 
+        <code>Сайт находится в процессе разработки! Связаться с автором можно через 
             <a href="mailto:anton.a.petrov[at] gmail.com">почту</a>.
         </code>
     </body>
